--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -5,13 +5,13 @@
 
     <groupId>org.dcache</groupId>
     <artifactId>Sapphire</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Combines small files to bigger files for archiving on tape</name>
 
     <properties>
-        <version.dcache>6.0.11</version.dcache>
+        <version.dcache>7.1.0-SNAPSHOT</version.dcache>
         <maven-compiler-plugin.source>1.8</maven-compiler-plugin.source>
         <maven-compiler-plugin.target>1.8</maven-compiler-plugin.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
