--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>Plugin that replaces hsm_internal.sh from Small Files Plugin</name>
 
     <properties>
-        <version.dcache>6.0.11</version.dcache>
+        <version.dcache>7.1.0-SNAPSHOT</version.dcache>
         <maven-compiler-plugin.source>1.8</maven-compiler-plugin.source>
         <maven-compiler-plugin.target>1.8</maven-compiler-plugin.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
