--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.dcache</groupId>
-    <artifactId>SmallFiles-Driver</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Sapphire</artifactId>
+    <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Plugin that replaces hsm_internal.sh from Small Files Plugin</name>
+    <name>Combines small files to bigger files for archiving on tape</name>
 
     <properties>
         <version.dcache>6.0.11</version.dcache>
