--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.dcache</groupId>
     <artifactId>Sapphire</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.3</version>
     <packaging>jar</packaging>
 
     <name>Combines small files to bigger files for archiving on tape</name>
@@ -30,7 +29,7 @@
         <url>https://github.com/dCache/sapphire.git</url>
         <connection>scm:git:https://github.com/dCache/sapphire.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/dCache/sapphire.git</developerConnection>
-        <tag>0.1</tag>
+        <tag>Sapphire-0.1.3</tag>
     </scm>
 
     <repositories>
