--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.dcache</groupId>
     <artifactId>Sapphire</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Combines small files to bigger files for archiving on tape</name>
@@ -29,7 +29,7 @@
         <url>https://github.com/dCache/sapphire.git</url>
         <connection>scm:git:https://github.com/dCache/sapphire.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/dCache/sapphire.git</developerConnection>
-        <tag>Sapphire-0.1.4</tag>
+        <tag>0.1</tag>
     </scm>
 
     <repositories>
