--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -28,7 +28,7 @@
         <url>https://github.com/dCache/sapphire.git</url>
         <connection>scm:git:https://github.com/dCache/sapphire.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/dCache/sapphire.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>0.2</tag>
     </scm>
 
     <repositories>
