--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.dcache</groupId>
     <artifactId>Sapphire</artifactId>
-    <version>0.2.2</version>
+    <version>0.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Combines small files to bigger files for archiving on tape</name>
@@ -28,7 +28,7 @@
         <url>https://github.com/dCache/sapphire.git</url>
         <connection>scm:git:https://github.com/dCache/sapphire.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/dCache/sapphire.git</developerConnection>
-        <tag>Sapphire-0.2.2</tag>
+        <tag>0.2</tag>
     </scm>
 
     <repositories>
