stage-files, conf: Add frontend

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -25,9 +25,8 @@ mongo_url=mongodb://localhost
 mongo_db=smallfiles
 working_dir=/sapphire
 loop_delay=5
-mount_point=
-data_root=
 webdav_door=
+frontend=
 macaroon=
 driver_url=
 keep_archive_time=
