Config: Add explanations

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -1,11 +1,23 @@
-# This is the configuration file for the pack-files and writebfids python scripts.
+# This is the configuration file for the pack-files, verify-container and stage-files python scripts.
 #
 # It contains general configuration and a list of per directory configuration
 # about how the files in these directories should be bundled together into
 # archives.
 
 
-# # Global configuration:
+# Global configuration:
+# script_id: An id that is appended to filenames of logs for example
+# log_level: The level at which the scripts log, allowed values are DEBUG, INFO, WARNING, ERROR, CRITICAL
+# mongo_url: The URL where the MongoDB listens on, starting with mongodb://
+# mongo_db: The name of the database in the MongoDB
+# working_dir: A directory where the scripts are storing temporary data
+# loop_delay: The time in seconds that pack-files wait between each packing run
+# webdav_door: The URL to dCache WebDav-door
+# macaroon: A macaroon that gives permission to the scripts to access archives and files in dCache
+# frontend: The URL to dCache frontend
+# driver_url: The URL to Sapphire driver running in dCache
+# keep_archive_time: The time stage-files keep a local copy of archives for staging
+
 [DEFAULT]
 script_id=pack
 log_level=DEBUG
@@ -20,15 +32,17 @@ driver_url=
 keep_archive_time=
 
 
-# Example 1:
-# Pack all files below the directory "/pnfs/sf-root/all" into archives of size
-# 20G, potentially mixing files from different subdirectories as soon as they
-# arrive (minAge = 0) and collect remaining files if their combined size is
-# less than the target archive size (here 20G) after (maxAge =) 60 minutes.
-# No additional checks are done to ensure archive integrity.
-#
-# Please note that the archivePath must not start with /
-
+# Packer sections
+# The following values are needed for packing:
+# file_expression: A regex pattern for files to be packed
+# s_group: A regex pattern for the store group that should be packed
+# store_name: A regex pattern for the store name that should be packed
+# archive_size: Size of an archive, supported units: K, M, G
+# min_age: The minimal age the files must have to be packed, unit is minutes
+# max_age: The maximal age the files may have before being packed, unit is minutes
+# verify: Method to verify archive. Possible values are filelist, chksum and off while chksum is not implemented yet
+# path_expression: Regex for the path that should be packed
+# archive_path: Path where the archive is written to in dCache
 
 [Example]
 file_expression=
@@ -40,6 +54,16 @@ max_age=
 verify=
 path_expression=
 archive_path=
+
+
+# Example 1:
+# Pack all files below the directory "/pnfs/sf-root/all" into archives of size
+# 20G, potentially mixing files from different subdirectories as soon as they
+# arrive (minAge = 0) and collect remaining files if their combined size is
+# less than the target archive size (here 20G) after (maxAge =) 60 minutes.
+# No additional checks are done to ensure archive integrity.
+#
+# Please note that the archivePath must not start with /
 
 
 # [Example1]
