Conf: Improve descriptions

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -16,7 +16,7 @@
 # macaroon: A macaroon that gives permission to the scripts to access archives and files in dCache
 # frontend: The URL to dCache frontend
 # driver_url: The URL to Sapphire driver running in dCache
-# keep_archive_time: The time stage-files keep a local copy of archives for staging
+# keep_archive_time: The time without any access, stage-files keeps a local copy of archives for staging
 
 [DEFAULT]
 script_id=pack
@@ -39,7 +39,7 @@ keep_archive_time=
 # store_name: A regex pattern for the store name that should be packed
 # archive_size: Size of an archive, supported units: K, M, G
 # min_age: The minimal age the files must have to be packed, unit is minutes
-# max_age: The maximal age the files may have before being packed, unit is minutes
+# max_age: The maximal age the files may have before being packed into smaller archives, unit is minutes
 # verify: Method to verify archive. Possible values are filelist, chksum and off while chksum is not implemented yet
 # path_expression: Regex for the path that should be packed
 # archive_path: Path where the archive is written to in dCache
