Conf: Make clear that macaroon expects a path to a file with a macaroon

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -13,7 +13,7 @@
 # working_dir: A directory where the scripts are storing temporary data
 # loop_delay: The time in seconds that pack-files wait between each packing run
 # webdav_door: The URL to dCache WebDav-door
-# macaroon: A macaroon that gives permission to the scripts to access archives and files in dCache
+# macaroon: Path to a file that contains a macaroon that gives permission to the scripts to access archives and files in dCache
 # frontend: The URL to dCache frontend
 # driver_url: The URL to Sapphire driver running in dCache
 # keep_archive_time: The time without any access, stage-files keeps a local copy of archives for staging
