Conf: Add quota

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -17,6 +17,7 @@
 # frontend: The URL to dCache frontend
 # driver_url: The URL to Sapphire driver running in dCache
 # keep_archive_time: The time without any access, stage-files keeps a local copy of archives for staging
+# quota: maximum number of concurrent container on local filesystem, -1 for no restriction
 
 [DEFAULT]
 script_id=pack
@@ -30,7 +31,7 @@ frontend=
 macaroon=
 driver_url=
 keep_archive_time=
-
+quota=
 
 # Packer sections
 # The following values are needed for packing:
