Add documentation about verify-value and systemd

--- a/packer/conf/container.conf
+++ b/packer/conf/container.conf
@@ -18,6 +18,7 @@
 # driver_url: The URL to Sapphire driver running in dCache
 # keep_archive_time: The time without any access, stage-files keeps a local copy of archives for staging
 # quota: maximum number of concurrent container on local filesystem, -1 for no restriction
+# verify: Set to true if certificates should be checked; Set to a path to CA Bundle files if the certificate needs additional CAs to be verified; Set to false to not check certificates -> not recommended!!
 
 [DEFAULT]
 script_id=pack
@@ -32,6 +33,7 @@ macaroon=
 driver_url=
 keep_archive_time=
 quota=
+verify=
 
 # Packer sections
 # The following values are needed for packing:
